--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,13 @@ ktor {
     port = 8080
     port = ${?PORT}
   }
+
   application {
     modules = [me.henriquelluiz.ApplicationKt.module]
+  }
+
+  mongo {
+    uri = ${?URI}
+    database = ${?DATABASE}
   }
 }
