--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 kotlin.code.style=official
-ktor_version=3.0.0-beta-1
+ktor_version=2.3.12
 kotlin=2.0.0
 logback=1.4.14
 html=0.10.1
+datetime=0.6.0
 mongo=5.1.1
 koin=3.5.6
 junit=5.8.2
