add html dsl template

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,7 @@ ktor {
   deployment {
     port = 8080
     port = ${?PORT}
+    watch = [classes]
   }
 
   application {
@@ -12,4 +13,6 @@ ktor {
     uri = ${?URI}
     database = ${?DATABASE}
   }
+
+  development = true
 }
